# Project-EvalPulse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EvalPulse_Project_Plan.docx  IMPLEMENTATION_PLAN.md  LICENSE  README.md  evalpulse.yml.example  pyproject.toml  run_demo.py
.github/workflows/: ci.yml  regression_tests.yml
Screenshots/: Demo_CSV.csv
dashboard/: __init__.py  app.py  charts.py  demo_data.py
docs/: WEEK1_DOCS.md  WEEK2_DOCS.md  WEEK3_DOCS.md  WEEK4_DOCS.md  WEEK5_DOCS.md  WEEK6_DOCS.md  WEEK7_DOCS.md  WEEK8_DOCS.md
evalpulse/: __init__.py  alerts.py  cli.py  config.py  health_score.py  models.py  notifications.py  sdk.py  worker.py
evalpulse/modules/: __init__.py  base.py  drift.py  drift_store.py  embeddings.py  golden_dataset.py  groq_client.py  hallucination.py  quality.py  rag_eval.py  regression.py
evalpulse/storage/: __init__.py  base.py  sqlite_store.py
examples/: quickstart.py
examples/fastapi_app/: README.md  main.py
examples/golden_datasets/: sample_golden.json
examples/groq_chatbot/: README.md  main.py
examples/rag_pipeline/: README.md  main.py
hf_space/: README.md  app.py  requirements.txt
tests/: conftest.py
tests/integration/: test_quality_flow.py  test_smoke.py
tests/unit/: test_alerts.py  test_cli.py  test_config.py  test_demo_data.py  test_drift.py  test_hallucination.py  test_health_score.py  test_models.py  test_notifications.py  test_quality.py  test_rag_eval.py  test_regression.py  test_sdk.py  test_sqlite_store.py  test_worker.py
